--- a/Week 03/Project 02/index.html
+++ b/Week 03/Project 02/index.html
@@ -25,7 +25,7 @@
       <section aria-label="navbar">
         <nav class="navbar">
           <div>
-            <img src="./assets/white-logo.png" alt="logo" class="logo" />
+            <img src="./assets/white-logo.png" class="logo" width="130" height="45"/>
           </div>
           <div class="line"></div>
           <div class="grow-list">
@@ -45,11 +45,12 @@
       <!-- Hero Section -->
       <section aria-label="hero">
         <div class="hero">
+          <!-- <img src="./assets/bg.png" alt="background"> -->
           <h1 class="hero-heading">Lets build a better tomorrow, together.</h1>
           <p class="hero-description">
             Buy 1 Token. Join the DAO. Change the world
           </p>
-          <button class="button-large">Request Early Access</button>
+          <button class="button-large">Request early access</button>
         </div>
       </section>
     </div>
