--- a/Week 03/Project 03/index.html
+++ b/Week 03/Project 03/index.html
@@ -75,19 +75,19 @@
             <img src="./assets/squares.png" alt="square-pattern" />
           </span>
           <!-- Star -->
-          <span class="star">
-            <img src="./assets/start.png" alt="start-pattern" />
+          <span class="star-1">
+            <img src="./assets/start.png" alt="start-pattern" width="60" height="60"/>
           </span>
           <!-- Star -->
-          <span class="star">
-            <img src="./assets/start.png" alt="start-pattern" />
+          <span class="star-2">
+            <img src="./assets/start.png" alt="start-pattern" width="40" height="40"/>
           </span>
           <!-- Globe -->
           <span class="globe">
-            <img src="./assets/globe.png" alt="globe-pattern" />
+            <img src="./assets/globe.png" alt="globe-pattern" width="60" height="65px"/>
           </span>
           <div>
-            <img src="./assets/Image.png" alt="person-hero-iamge" />
+            <img src="./assets/Image.png" alt="person-hero-image" />
           </div>
           <div class="hero-container-right">
             <h1 class="hero-heading">What’s Trend in 2025 ?</h1>
